--- a/Law/templates/Law/law_our_team.html
+++ b/Law/templates/Law/law_our_team.html
@@ -8,7 +8,7 @@
 
     <div class="row">
       {% for lawyer in lawyers %}
-        <div class="card" style="width: 22rem;">
+        <div class="card justify-content-center" style="width: 22rem; ">
           <img src="{{ lawyer.image.url }}" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="lawyer-name">Me. {{lawyer.full_name}}</h5>
