law_footer.html

--- a/Law/templates/Law/law_footer.html
+++ b/Law/templates/Law/law_footer.html
@@ -4,11 +4,11 @@
         <div class="row justify-content-center text-center">
             <div class="col-md-4 col-sm-12">
                 <h5>Cabinet Juridique de Consultation, Conseil et Assistance juridique</h5>
-                <img src="{% static 'images/smart_law_firm_logo.png' %}" alt="smart-law-firm" class="img-fluid">
+                <img src="{% static 'images/slf.png' %}" alt="smart-law-firm" class="img-fluid">
                 <hr>
                 <p>35, Avenue Ngafula, Quartier Finda, Commune de Ngaliema (Ref. Centre Supérieur) Kinshasa, RDC.</p>
                 <hr>
-                <p class="text-center detail">Version: SLF-2.0</p>
+                <p class="text-center detail">Version: SLF_3.01</p>
             </div>
             <div class="col-md-4 col-sm-12">
                 <h5>Domaines D'INTERVENTION</h5>
