law_contact.html

--- a/Law/templates/Law/law_contact.html
+++ b/Law/templates/Law/law_contact.html
@@ -12,21 +12,32 @@
 
   <h3>Besoin d'Assistance Juridique ?</h3>
 
+  
+
   <p>Le cabinet juridique  <strong style="color: #012D53;">SMART LAW FIRM</strong>  met son expertise à votre service pour vous accompagner dans la création de votre entreprise, la gestion des transactions immobilières et la rédactions de documents juridiques. Avec une équipe de professionnels qualifiés, nous vous garantissons des conseils avisés et une assistance adoptée à vos besoins.</p>
-    <img src="{% static 'images/smart_law_firm_logo.png' %}" alt='smart-law-firm' />
+    <img src="{% static 'images/aj.jpg' %}" alt='smart-law-firm' />
                 
+    
+
+
     <div class="row">
-        <div class="col-lg-6 col-sm-12">
+        <div class="col-lg-8 col-sm-12">
             <h2>Nos Coordonnées</h2>
             <hr>
-            <h6>Email : smartlawfirm@cabjuridique.com</h6>
-            <h6>Téléphone : + (243) 85 624 81 81 (WhatsApp), <br> + (243) 81 059 53 52 (Appel & SMS)</h6>
-            <h6>Site Web : https://www.smartlawfirm.com (Bientôt disponible)</h6>
-            <h6>Adresse : 35, Avenue Ngafula, Quartier Finda, Commune de Ngaliema (Ref. Centre Supérieur) Kinshasa, RDC.</h6>
-
+            <h6><i class="fa-solid fa-phone-volume"></i> Appel/SMS : + (243) 81 059 53 52</h6>
+            <h6><i class="fa-brands fa-whatsapp"></i> WhatsApp : + (243) 85 624 81 81</h6>
+            <h6><i class="fa-solid fa-envelope"></i> Email : smartlawfirm@cabjuridique.com</h6>
+            <h6><i class="fa-solid fa-location-dot"></i>Adresse : 35, Avenue Ngafula, Quartier Finda, Commune de Ngaliema (Ref. Centre Supérieur) Kinshasa, RDC.</h6>
+            <h6><i class="fa-solid fa-globe"></i> Site Web : https://www.smartlawfirm.com (Bientôt disponible)</h6>
+            <h6>
+                <i class="fa-brands fa-facebook"></i>
+                <i class="fa-brands fa-instagram"></i>
+                <i class="fa-brands fa-tiktok"></i>
+                Réseaux Sociaux : SMART LAW FIRM (Hors Service)
+            </h6>
+            <hr>
         </div>
     </div>
-    <hr>
     <h3>Besoin d'un Rendez-vous ?</h3>
     
 
