--- a/templates/templates_bases.html
+++ b/templates/templates_bases.html
@@ -31,6 +31,10 @@
     box-shadow: none; 
   }
 
+  .custom-navbar .navbar-toggler{
+    background-color: gold;
+  }
+
   /* Titre au survol */
   .custom-navbar .navbar-brand:hover {
     color: #fff;
