--- a/Law/templates/Law/law_about_us.html
+++ b/Law/templates/Law/law_about_us.html
@@ -25,7 +25,7 @@
                         
                         </div>
                         <div class="col-sm-6">
-                                <img src="{% static 'images/smart_law_firm_logo.png' %}" alt='smart-law-firm' />
+                                <img src="{% static 'images/about_us.jpg' %}" alt='smart-law-firm' />
                 
                         </div>
                 </div>
