--- a/templates/templates_bases.html
+++ b/templates/templates_bases.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css">
+
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.6/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4Q6Gf2aSP4eDXB8Miphtr37CMZZQ5oXLH2yaXMJ2w8e2ZtHTl7GptT4jmndRuHDT" crossorigin="anonymous">
     <link rel="stylesheet" href="{% static 'css/styles.css' %}">
     <title>SMART LAW FIRM - Cabinet Juridique</title>
@@ -31,7 +33,7 @@
     box-shadow: none; 
   }
 
-  .custom-navbar .navbar-toggler{
+  .custom-navbar .navbar-toggler-icon{
     background-color: gold;
   }
 
@@ -243,7 +245,7 @@
       padding: 20px;
     }
     .contact-page .contact-text p{
-      font-size: 20px;
+      font-size: 17px;
       text-align: justify;
     }
     .contact-page .contact-text h2{
@@ -251,6 +253,10 @@
       font-weight: bold;
       font-size: 20px;
       text-transform: uppercase;
+    }
+    .contact-page .contact-text i{
+      color:#1a0d94;
+      font-size: 20px;
     }
     .contact-page .contact-text h3{
       color: #012D53;
@@ -266,7 +272,7 @@
     }
     .contact-page .contact-text img{
      display: block;
-      width: 270px;
+      width: 60%;
       height: auto;
       text-align: center;
       margin-left: auto ;
@@ -274,7 +280,7 @@
       margin-bottom: 20px;
     }
     .contact-page .contact-text h6{
-      font-weight: bold;
+      font-weight: inherit;
       font-size: 17px;
     }
     .contact-page .contact-text a{
@@ -553,9 +559,6 @@ text-transform: lowercase;
       padding: 10px;
     }
 
-    .carousel-item {
-        
-    }
     .carousel-caption{
       bottom: 200px;
     z-index: 2;
@@ -653,6 +656,10 @@ text-transform: lowercase;
 
     .contact-page .form-container{
       margin-top: 0;
+    }
+    .contact-page .contact-text img{
+      width: 350px;
+      
     }
 }
 
